# SMS-Finance-Extractor

./: .gitignore  README.md  pyproject.toml  requirements.txt
knowledge/: Annotated_SMS.csv  BERT_SMS.ipynb  Labeled_SMS.csv  TransactionMemo.csv  TransactionMemo.xlsx
src/crewbank/: crew.py  main.py
src/crewbank/config/: agents.yaml  tasks.yaml
src/crewbank/tools/: custom_tool.py
